@@ -90,6 +90,7 @@
  *   - ~ Fix -execv memory leak (9)
  *   - + o_lookup_strictness_tvrage added (gconf) (10)
  *   - + precheck ignores rule if imdb_skip_zero_score > 0 and score = 0 (10)
+ *   - ~ --daemon on command line is passed along to macro (11) 
  *
  * v2.3:
  *
